# rust_kinesis_kcl

./: Cargo.toml  LICENSE.txt
src/: lib.rs
src/interface/: mod.rs  processor.rs  record.rs
src/kinesis/: mod.rs
src/lease/: broker.rs  fetcher.rs  manager.rs  mod.rs  renewer.rs  shard.rs  taker.rs
src/util/: exception.rs  mod.rs  retry.rs  runnable.rs
src/worker/: mod.rs
