[package]
name = "kinesis_kcl"
version = "0.1.0"
authors = ["Dan Marchese <dan@marchese.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.4", features = ["full"] }
rusoto_core = "0.46.0"
rusoto_kinesis = "0.46.0"
dynomite = "0.10.0"
